# plotsim-mcp

./: .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FOLLOWUPS.md  README.md  RELEASE.md  SECURITY.md  SUPPORT.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
plotsim_mcp/: __init__.py  __main__.py  errors.py  runs.py  server.py
plotsim_mcp/tools/: __init__.py  create_dataset.py  describe_capability.py  describe_run.py  get_sandbox_root.py  get_schema.py  get_template.py  get_validation_report.py  list_runs.py  list_templates.py  load_run.py  preview.py  (+2 more)
tests/: test_collection_envelope.py  test_errors.py  test_fastmcp_error_passthrough.py  test_integration_create_dataset.py  test_integration_describe_capability.py  test_integration_describe_run.py  test_integration_get_sandbox_root.py  test_integration_get_schema.py  test_integration_get_template.py  test_integration_get_validation_report.py  test_integration_list_runs.py  test_integration_list_templates.py  test_integration_load_run.py  test_integration_preview.py  test_integration_trace_cell.py  test_integration_validate_config.py  test_protocol_create_dataset.py  test_protocol_describe_capability.py  test_protocol_describe_run.py  test_protocol_get_sandbox_root.py  test_protocol_get_schema.py  test_protocol_get_template.py  test_protocol_get_validation_report.py  test_protocol_list_runs.py  test_protocol_list_templates.py  test_protocol_load_run.py  test_protocol_preview.py  test_protocol_trace_cell.py  test_protocol_validate_config.py  test_runs.py  test_stdout_discipline.py  test_trace_cell_sample_rate.py  test_unit_create_dataset.py  test_unit_describe_capability.py  test_unit_describe_run.py  test_unit_get_sandbox_root.py  test_unit_get_schema.py  test_unit_get_template.py  test_unit_get_validation_report.py  test_unit_list_runs.py  (+5 more)
