[project]
name = "plotsim-mcp"
version = "0.0.2"
description = "Model Context Protocol server for plotsim — generate, validate, and inspect synthetic multi-table datasets from an MCP client."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [
    { name = "Mohamed Hossam" }
]
keywords = [
    "mcp",
    "model-context-protocol",
    "plotsim",
    "synthetic-data",
    "claude",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

dependencies = [
    "plotsim>=0.7.0",
    "mcp>=1.25,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.0",
    "ruff>=0.1.0",
    "build>=1.0",
]

[project.scripts]
plotsim-mcp = "plotsim_mcp.server:main"

[project.urls]
Repository = "https://github.com/mohossam01/plotsim-mcp"
Issues = "https://github.com/mohossam01/plotsim-mcp/issues"
Changelog = "https://github.com/mohossam01/plotsim-mcp/blob/main/CHANGELOG.md"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["plotsim_mcp*"]

[tool.setuptools.package-data]
plotsim_mcp = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
